# JsonAnalysis

./: README.md  pyproject.toml
jsonanalyzer/: __init__.py  __main__.py  analyzer.py  cli.py  file_handler.py  models.py  report.py
